Set background and start arranging elements

--- a/index.html
+++ b/index.html
@@ -2,23 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="solution.css">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 
 <body>
+    <div class="darkGray">
+        <div class="header">
+        <h3 id="headerLogo">Header Logo</h3>
+       <div class="links">
+        <ul>
+            <a>header link one</a>
+            <a>header link two</a>
+            <a>header link three</a>
+        </ul>
+        </div>
+    </div>
 
-    <div>Header Logo</div>
-    <ul>
-        <a>header link one</a>
-        <a>header link two</a>
-        <a>header link three</a>
-    </ul>
+    <div class="topContent">
+        <h1 id="hero">This website is awesome</h1>
+        <p id="headerSub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button>Sign up</button>
 
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-    <button>Sign up</button>
-    <img src="stockphotoNature.jpg">
+    </div>
+    <span id="image">
+        <img src="stockphotoNature.jpg" >
+
+    </span>
+    </div>
 
     <div class="white">
         <div>imgPlaceholder</div>
