Align background boxes

--- a/index.html
+++ b/index.html
@@ -7,56 +7,84 @@
 </head>
 
 <body>
+    <div class="container">
     <div class="darkGray">
         <div class="header">
         <h3 id="headerLogo">Header Logo</h3>
        <div class="links">
-        <ul>
+       <!-- <ul>-->
             <a>header link one</a>
             <a>header link two</a>
             <a>header link three</a>
-        </ul>
+            <!-- </ul> -->
         </div>
     </div>
 
-    <div class="topContent">
+
+    <div class="topContentBoth">
+    <div class="topContentLeft">
         <h1 id="hero">This website is awesome</h1>
         <p id="headerSub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
+        <div class="signUp"><button>Sign up</button></div>
 
     </div>
-    <span id="image">
+    <div id="image">
         <img src="stockphotoNature.jpg" >
 
-    </span>
+    </div>
+    </div>
+    </div>
+    <div class="white">
+        <div class="wrapWhite">
+        <h2>Some Random Information.</h2>
+
+        <div class="deck">
+        <div class="card">
+        <div id="placeholder">imgPlaceholder</div>
+        <div class="subtext">
+        <p>this is some subtext under an illustration or image</p>
+        </div>
     </div>
 
-    <div class="white">
-        <div>imgPlaceholder</div>
-        <p>this is some subtext under an illustration or image</p>
-        <div>imgPlaceholder</div>
-        <p>this is some subtext under an illustration or image</p>
+    <div class="card">
+        <div id="placeholder">imgPlaceholder</div>
 
-        <div>imgPlaceholder</div>
+        <div class="subtext">
         <p>this is some subtext under an illustration or image</p>
+    </div>
+</div>
+    <div class="card">
+        <div id="placeholder">imgPlaceholder</div>
 
-        <div>imgPlaceholder</div>
+        <div class="subtext">
+
         <p>this is some subtext under an illustration or image</p>
-
-
+    </div>
+</div>
+    <div class="card">
+        <div id="placeholder">imgPlaceholder</div>
+        <div class="subtext">
+        <p>this is some subtext under an illustration or image</p>
+    </div>
+    </div>
+</div>
+    </div>
     </div>
 
     <div class="gray">
 
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+       <div id="quote"> <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      
         <h6>Thor, God of Thunder</h6>
+    </div>
+    </div>
 
     <div class="whiteBottom">
 
         <div class="blueInside">
             <h6>Call to action! It's time!</h6>
             <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <button id="clearButton">Sign up</button>
         </div>
 
 
@@ -72,6 +100,6 @@
 
 
 
-
+</div>
 </body>
 </html>
