--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Landing Page</title>
 </head>
 
@@ -40,21 +40,21 @@
 
         <div class="deck">
         <div class="card">
-        <div id="placeholder">imgPlaceholder</div>
-        <div class="subtext">
+            <img src="bridge.jpeg" alt="robin image" id="placeholder" >
+            <div class="subtext">
         <p>this is some subtext under an illustration or image</p>
         </div>
     </div>
 
     <div class="card">
-        <div id="placeholder">imgPlaceholder</div>
+       <img src="bear.jpg" alt="bear image" id="placeholder" >
 
         <div class="subtext">
         <p>this is some subtext under an illustration or image</p>
     </div>
 </div>
     <div class="card">
-        <div id="placeholder">imgPlaceholder</div>
+        <img src="robin.jpeg" alt="robin image" id="placeholder" >
 
         <div class="subtext">
 
@@ -62,7 +62,7 @@
     </div>
 </div>
     <div class="card">
-        <div id="placeholder">imgPlaceholder</div>
+        <img src="redwood.jpg" alt="robin image" id="placeholder" >
         <div class="subtext">
         <p>this is some subtext under an illustration or image</p>
     </div>
