Align all content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
     <div class="darkGray">
+        <div class="headerContainer">
         <div class="header">
         <h3 id="headerLogo">Header Logo</h3>
        <div class="links">
@@ -19,17 +20,17 @@
             <!-- </ul> -->
         </div>
     </div>
-
+</div>
 
     <div class="topContentBoth">
     <div class="topContentLeft">
         <h1 id="hero">This website is awesome</h1>
-        <p id="headerSub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <p id="heroSub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
         <div class="signUp"><button>Sign up</button></div>
 
     </div>
     <div id="image">
-        <img src="stockphotoNature.jpg" >
+        <img src="stockphotoNature.jpg">
 
     </div>
     </div>
@@ -73,17 +74,19 @@
 
     <div class="gray">
 
-       <div id="quote"> <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+       <div id="quote"> <p id="inspire">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
       
-        <h6>Thor, God of Thunder</h6>
+        <h6 id="Thor">- Thor, God of Thunder</h6>
     </div>
     </div>
 
     <div class="whiteBottom">
 
         <div class="blueInside">
-            <h6>Call to action! It's time!</h6>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="blueLeft">
+            <h6 id="call">Call to action! It's time!</h6>
+            <p id="signUp">Sign up for our product by clicking that button right over there!</p>
+        </div>
             <button id="clearButton">Sign up</button>
         </div>
 
